--- a/.classpath
+++ b/.classpath
@@ -7,6 +7,7 @@
 	<classpathentry kind="src" path="src-test"/>
 	<classpathentry kind="src" path="src-sim"/>
 	<classpathentry kind="src" path="src-endurance"/>
+	<classpathentry kind="src" path="src-imcwan"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="lib/javapoet-1.8.0.jar"/>
 	<classpathentry kind="lib" path="lib/grizzly-core-2.3.28.jar"/>
