--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -14,4 +14,4 @@ jobs:
       with:
         java-version: 1.8
     - name: Build with Ant
-      run: ant -noinput -buildfile build.xml libimc.jar
+      run: ant -noinput -buildfile build.xml jar
