--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,28 @@
-subprojects {
+allprojects {
     apply plugin: 'java'
  
     repositories {
         mavenCentral()
     }
+    dependencies {
+        compile 'com.eclipsesource.minimal-json:minimal-json:0.9.5'
+    }
 }
 
-project(':core') {
+subprojects {
    dependencies {
-     compile 'com.eclipsesource.minimal-json:minimal-json:0.9.5'
+     compile rootProject
    }
 }
 
 project(':generator') {
    dependencies {
-      compile project(':core')
       compile 'com.squareup:javapoet:1.12.1'
    }
 }
 
 project(':actors') {
    dependencies {
-      compile project(':core')
       compile 'org.glassfish.grizzly:grizzly-core:2.3.28'
       compile 'com.squareup:otto:1.3.8'      
    }
@@ -29,22 +30,9 @@ project(':actors') {
 
 project(':backseat') {
    dependencies {
-      compile project(':core')     
       compile project(':endurance')     
       compile 'org.nanohttpd:nanohttpd:2.3.0'
       compile 'org.knowm.xchart:xchart:3.6.2'
-   }
-}
-
-project(':endurance') {
-   dependencies {
-      compile project(':core')      
-   }
-}
-
-project(':imcwan') {
-   dependencies {
-      compile project(':core')      
    }
 }
 
