--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,18 +1,18 @@
-name: Java CI
+name: Gradle CI
 
 on: [push]
 
 jobs:
-  build:
- 
-    runs-on: ubuntu-latest
-    
+  gradle:
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v1
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
+    - uses: actions/setup-java@v1
       with:
-        java-version: 1.8
-    - name: Build with Gradle
-      uses: eskatos/gradle-command-action@v1
-  
+        java-version: 8
+    - uses: eskatos/gradle-command-action@v1
+      with:
+        arguments: build
