--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ allprojects {
     }
 
     apply plugin: 'java'
-    apply plugin: 'maven'
+    apply plugin: 'maven-publish'
 
     dependencies {
         compile 'com.eclipsesource.minimal-json:minimal-json:0.9.5'        
@@ -29,4 +29,20 @@ task dist(type: Jar) {
 
 clean {
     delete fileTree(dir: 'dist' , include: '**/*.jar')
+}
+
+task sourcesJar(type: Jar) {
+    from sourceSets.main.allJava
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId = 'pt.lsts.imc4j'
+            artifactId = 'core'
+            version = '1.0.0'
+
+            from components.java
+        }
+    }
 }
