--- a/core/build.gradle
+++ b/core/build.gradle
@@ -2,6 +2,8 @@ jar.baseName = "imc4j"
 
 dependencies {
     compile 'com.eclipsesource.minimal-json:minimal-json:0.9.5'
+    compile 'javax.xml.bind:jaxb-api:2.3.0'
+    compile 'javax.annotation:javax.annotation-api:1.3.2'
 }
 
 task dist(type: Jar) {
