--- a/core/build.gradle
+++ b/core/build.gradle
@@ -11,7 +11,7 @@ task dist(type: Jar) {
     group = 'Distribution'
     from {configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
     with jar
-    baseName = "imc4j"
-    destinationDir = new java.io.File("$rootDir/dist")
+    archiveBaseName = "imc4j"
+    destinationDirectory = new java.io.File("$rootDir/dist")
 }
 
