--- a/core/build.gradle
+++ b/core/build.gradle
@@ -4,6 +4,8 @@ dependencies {
     compile 'com.eclipsesource.minimal-json:minimal-json:0.9.5'
     compile 'javax.xml.bind:jaxb-api:2.3.0'
     compile 'javax.annotation:javax.annotation-api:1.3.2'
+
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
 task dist(type: Jar) {
