--- a/backseat/build.gradle
+++ b/backseat/build.gradle
@@ -26,10 +26,30 @@ def jarTask(jarName, destFolder, mainClass) {
     }
 }
 
+
 jarTask('SoiExecutive', '/dist/soi', 'pt.lsts.autonomy.soi.SoiExecutive')
+createLauncher(project, 'soi', '/dist/soi', SoiExecutive.archiveFileName.get(),
+        'pt.lsts.autonomy.soi.SoiExecutive', true,
+        false, 'pt.lsts.httpd.BackSeatServer', '8091', false)
+SoiExecutive.dependsOn launcherSoi
+
 jarTask('DripExecutive', '/dist/drip', 'pt.lsts.backseat.drip.DripExecutive')
+createLauncher(project, 'drip', '/dist/drip', DripExecutive.archiveFileName.get(),
+        'pt.lsts.backseat.drip.DripExecutive', false,
+        false, 'pt.lsts.httpd.BackSeatServer', '8092', false)
+DripExecutive.dependsOn launcherDrip
+
 jarTask('ArpaoExec', '/dist/arpao', 'pt.lsts.autonomy.ArpaoExecutive')
+createLauncher(project, 'arpao', '/dist/arpao', ArpaoExec.archiveFileName.get(),
+        'pt.lsts.autonomy.ArpaoExecutive', true,
+        true, 'pt.lsts.httpd.BackSeatServer', '8088', false)
+ArpaoExec.dependsOn launcherArpao
+
 jarTask('Distress', '/dist/distress', 'pt.lsts.backseat.distress.DistressSurvey')
+createLauncher(project, 'distress', '/dist/distress', Distress.archiveFileName.get(),
+        'pt.lsts.backseat.distress.DistressSurvey', true,
+        false, 'pt.lsts.httpd.BackSeatServer', '8090', false)
+Distress.dependsOn launcherDistress
 
 task execJars {
     group 'Distribution'
