--- a/core/build.gradle
+++ b/core/build.gradle
@@ -4,6 +4,7 @@ dependencies {
     compile 'com.eclipsesource.minimal-json:minimal-json:0.9.5'
     compile 'javax.xml.bind:jaxb-api:2.3.0'
     compile 'javax.annotation:javax.annotation-api:1.3.2'
+    compile 'io.vertx:vertx-core:3.8.3'    
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
@@ -27,4 +28,12 @@ task pcreator(type: Jar) {
     with jar
     archiveBaseName = "pcreator"
     destinationDirectory = new java.io.File("$rootDir/dist")
+}
+
+task gw(type: JavaExec) {
+    group = "Execution"
+    description = "Create a JSON gateway"
+    classpath = sourceSets.main.runtimeClasspath
+    main = "pt.lsts.imc4j.net.JsonGateway"
+    args = ["8009"]
 }
